Correction gap téléphone

--- a/public/CSS/projets-responsive.css
+++ b/public/CSS/projets-responsive.css
@@ -719,6 +719,7 @@
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 2px;
   margin-top: 100px;
+  width: 100%;
 }
 .gif-container {
   position: relative;
@@ -867,6 +868,7 @@ div.item_slide:nth-of-type(4) img{
   pointer-events: none;
   opacity: 1;
   transition: opacity 3s ease-in-out;
+  width: 100%;
 }
 
 .swipe-indicator.hidden {
