--- a/public/CSS/responsive-tarifs.css
+++ b/public/CSS/responsive-tarifs.css
@@ -119,7 +119,7 @@
 		padding:10px 0px 10px 0px;
 		transition: 0.2s;
 		background-color: white;
-		width: 78vw !important;
+		width: 60vw !important;
 		margin: 0px auto;
 		border-radius: 2px;
 	}
